Improved consistency & add serialization